# Caspian

./: .gitignore  AGENTS.md  APP_DESIGN_PHILOSOPHY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LINUX_SETUP.md  PLATFORM_SUPPORT.md  README.md  TESTING.md  biome.jsonc  bunfig.toml  create-release.sh  electron-builder.canary.ts  electron-builder.ts  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test-setup.ts  tsconfig.json  vite.config.ts
.cache/: tsbuildinfo.json
.github/: dependabot.yml  pull_request_template.md
plans/: 20260210-1400-branch-name-duplicate-validation.md  20260210-2100-default-terminal-on-node-creation.md  (+2 more)
src-tauri/: Cargo.toml  caspian.desktop  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sentry_utils.rs
src-tauri/src/agents/: adapter.rs  claude_code.rs  json_types.rs  mod.rs  process.rs  streaming.rs
src-tauri/src/audit/: logger.rs  mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/commands/: agent.rs  audit.rs  auth.rs  branch.rs  chat.rs  diff.rs  manifest.rs  memory.rs  mod.rs  node.rs  notification.rs  pr.rs  repository.rs  watcher.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/git/: mod.rs  naming.rs  operations.rs  worktree.rs  worktree_async.rs
src-tauri/src/manifest/: mod.rs  parser.rs  validator.rs
src-tauri/src/notifications/: badge_service.rs  mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/watcher/: mod.rs
(+887 files in other folders)
