[package]
name = "caspian"
version = "1.0.0"
description = "Control plane for AI-generated code changes"
authors = ["Caspian"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "caspian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# Auth / OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Git operations
git2 = "0.19"

# Utilities
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
lazy_static = "1.5"
open = "5"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Error tracking
sentry = "0.46.1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
